--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
     "react-bootstrap": "^2.5.0",
+    "react-parallax": "^3.5.1",
     "react-player": "^2.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.1",
